resolve quantity field issue